4.0.12
 * Support max SSTable size in sorted CQLSSTableWriter (CASSANDRA-18941)
 * Fix nodetool repair_admin summarize-pending command to not throw exception (CASSANDRA-19014)
 * Fix cassandra-stress in simplenative mode with prepared statements (CASSANDRA-18744)
 * Fix filtering system ks sstables for relocation on startup (CASSANDRA-18963)
 * Remove completed coordinator sessions (CASSANDRA-18903)
 * Make StartupConnectivityChecker only run a connectivity check if there are no nodes which are running a version prior to Cassandra 4 (CASSANDRA-18968)
 * Retrieve keyspaces metadata and schema version concistently in DescribeStatement (CASSANDRA-18921)
 * Gossip NPE due to shutdown event corrupting empty statuses (CASSANDRA-18913)
 * Synchronize CQLSSTableWriter#build on the Schema.instance object (CASSANDRA-18317)
 * Fix closing iterator in SecondaryIndexBuilder (CASSANDRA-18361)
 * Update hdrhistogram to 2.1.12 (CASSANDRA-18893)
 * Improve performance of compactions when table does not have an index (CASSANDRA-18773)
 * JMH improvements - faster build and async profiler (CASSANDRA-18871)
 * Enable 3rd party JDK installations for Debian package (CASSANDRA-18844)
 * Fix NTS log message when an unrecognized strategy option is passed (CASSANDRA-18679)
 * Fix BulkLoader ignoring cipher suites options (CASSANDRA-18582)
 * Migrate Python optparse to argparse (CASSANDRA-17914)
Merged from 3.11:
 * Fix delayed SSTable release with unsafe_aggressive_sstable_expiration (CASSANDRA-18756)
 * Revert CASSANDRA-18543 (CASSANDRA-18854)
 * Fix NPE when using udfContext in UDF after a restart of a node (CASSANDRA-18739)
 * Moved jflex from runtime to build dependencies (CASSANDRA-18664)
Merged from 3.0:
 * Suppress CVE-2023-6378 (CASSANDRA-19142) 
 * Do not set RPC_READY to false on transports shutdown in order to not fail counter updates for deployments with coordinator and storage nodes with transports turned off (CASSANDRA-18935)
 * Suppress CVE-2023-44487 (CASSANDRA-18943)